--- a/.parcelrc
+++ b/.parcelrc
@@ -1,3 +1,8 @@
 {
-    "extends": "@parcel/config-default"
+    "extends": "@parcel/config-default",
+    "transformers": {
+        "*.module.css": [
+            "parcel-transformer-ts-css-modules"
+        ]
+    }
 }
