--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/express": "^4.17.13",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.5",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
@@ -66,10 +67,15 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "parcel": "^2.2.1",
+    "parcel-transformer-ts-css-modules": "^1.0.14",
     "postcss": "^8.4.8",
     "postcss-cli": "^9.1.0",
+    "postcss-custom-properties": "^12.1.4",
+    "postcss-import": "^14.0.2",
     "postcss-modules": "^4.3.1",
+    "postcss-url": "^10.1.3",
     "prettier": "^2.5.1",
+    "react-helmet-async": "^1.2.3",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2"
