--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "targets": {
     "frontend": {
       "source": [
-        "src/index.html"
+        "./src/index.html"
       ],
       "publicUrl": "/frontend"
     },
@@ -67,7 +67,6 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "parcel": "^2.2.1",
-    "parcel-transformer-ts-css-modules": "^1.0.14",
     "postcss": "^8.4.8",
     "postcss-cli": "^9.1.0",
     "postcss-custom-properties": "^12.1.4",
@@ -76,6 +75,7 @@
     "postcss-url": "^10.1.3",
     "prettier": "^2.5.1",
     "react-helmet-async": "^1.2.3",
+    "slugify": "^1.6.5",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2"
