--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "An accessible, mobile-focused resource sharing app",
   "main": "index.js",
   "scripts": {
-    "dev": "npm -s run build && parcel ./src/index.html",
+    "build": "npx parcel build",
+    "dev": "npx parcel ./src/index.html",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+    "cleanup": "rm -rf .parcel-cache",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
-    "build": "parcel build",
     "start": "npm -s run build && node dist/backend/index.js"
   },
   "repository": {
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@parcel/css": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -59,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "autoprefixer": "^10.4.2",
+    "dotenv": "^16.0.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
@@ -66,7 +69,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "parcel": "^2.2.1",
+    "parcel": "2.3.2",
     "postcss": "^8.4.8",
     "postcss-cli": "^9.1.0",
     "postcss-custom-properties": "^12.1.4",
@@ -76,7 +79,6 @@
     "prettier": "^2.5.1",
     "react-helmet-async": "^1.2.3",
     "slugify": "^1.6.5",
-    "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2"
   }
