--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "postcss-url": "^10.1.3",
     "prettier": "^2.5.1",
     "react-helmet-async": "^1.2.3",
+    "sharp": "^0.29.3",
     "slugify": "^1.6.5",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2"
