--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@parcel/css": "^1.7.3",
+    "@parcel/transformer-inline-string": "^2.3.2",
+    "@parcel/transformer-svg-react": "^2.4.1",
     "@types/express": "^4.17.13",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
