resource page is working

--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "os-browserify": "^0.3.0",
     "parcel": "2.3.2",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.8",
     "postcss-cli": "^9.1.0",
     "postcss-custom-properties": "^12.1.4",
@@ -79,6 +81,7 @@
     "postcss-modules": "^4.3.1",
     "postcss-url": "^10.1.3",
     "prettier": "^2.5.1",
+    "process": "^0.11.10",
     "react-helmet-async": "^1.2.3",
     "sharp": "^0.29.3",
     "slugify": "^1.6.5",
